--- a/Source/Mosa.Platform.x86/Mosa.Platform.x86.csproj
+++ b/Source/Mosa.Platform.x86/Mosa.Platform.x86.csproj
@@ -98,7 +98,7 @@
     <Compile Include="Instructions\Btr.cs" />
     <Compile Include="Instructions\Cmovcc.cs" />
     <Compile Include="Instructions\CmpXchgLoad.cs" />
-    <Compile Include="Instructions\Fld.cs" />
+    <Compile Include="Instructions\Lea.cs" />
     <Compile Include="Instructions\Movaps.cs" />
     <Compile Include="Instructions\MovupsStore.cs" />
     <Compile Include="Instructions\MovupsLoad.cs" />
@@ -149,7 +149,7 @@
     <Compile Include="Intrinsic\SyncCompareAndSwap.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Stages\BuildStackStage.cs" />
-    <Compile Include="Stages\ConversionPhaseStage.cs" />
+    <Compile Include="Stages\FixMovStage.cs" />
     <Compile Include="Stages\SSESetupStage.cs" />
     <Compile Include="Stages\FloatingPointStage.cs" />
     <Compile Include="Stages\FinalTweakTransformationStage.cs" />
@@ -203,7 +203,6 @@
     <Compile Include="Instructions\Cvttss2si.cs" />
     <Compile Include="Instructions\Div.cs" />
     <Compile Include="Instructions\Jmp.cs" />
-    <Compile Include="Instructions\Lea.cs" />
     <Compile Include="Stages\Multiboot0695Stage.cs" />
     <Compile Include="Instructions\Call.cs" />
     <Compile Include="Instructions\Movsd.cs" />
