--- a/Source/Mosa.Compiler.Framework/Mosa.Compiler.Framework.csproj
+++ b/Source/Mosa.Compiler.Framework/Mosa.Compiler.Framework.csproj
@@ -100,12 +100,18 @@
     <Compile Include="Intrinsics\GetObjectFromAddress.cs" />
     <Compile Include="Intrinsics\Load64.cs" />
     <Compile Include="Intrinsics\InternalsForArray.cs" />
+    <Compile Include="IR\AddFloatR4.cs" />
+    <Compile Include="IR\DivFloatR8.cs" />
     <Compile Include="IR\FilterEnd.cs" />
     <Compile Include="IR\FilterStart.cs" />
-    <Compile Include="IR\Load2.cs" />
+    <Compile Include="IR\LoadFloatR4.cs" />
+    <Compile Include="IR\LoadFloatR8.cs" />
+    <Compile Include="IR\MulFloatR8.cs" />
+    <Compile Include="IR\RemFloatR8.cs" />
     <Compile Include="IR\SetLeaveTarget.cs" />
     <Compile Include="IR\KillAllExcept.cs" />
     <Compile Include="IR\Flow.cs" />
+    <Compile Include="IR\SubFloatR8.cs" />
     <Compile Include="MosaCompiler.cs" />
     <Compile Include="InstructionSize.cs" />
     <Compile Include="Intrinsics\GetObjectAddress.cs" />
@@ -231,20 +237,20 @@
     <Compile Include="Stages\StaticAllocationResolutionStage.cs" />
     <Compile Include="IR\Throw.cs" />
     <Compile Include="Intrinsics\InternalAllocateString.cs" />
-    <Compile Include="IR\AddFloat.cs" />
+    <Compile Include="IR\AddFloatR8.cs" />
     <Compile Include="IR\AddSigned.cs" />
     <Compile Include="IR\AddUnsigned.cs" />
     <Compile Include="IR\Break.cs" />
-    <Compile Include="IR\DivFloat.cs" />
+    <Compile Include="IR\DivFloatR4.cs" />
     <Compile Include="IR\DivSigned.cs" />
     <Compile Include="IR\DivUnsigned.cs" />
-    <Compile Include="IR\MulFloat.cs" />
+    <Compile Include="IR\MulFloatR4.cs" />
     <Compile Include="IR\MulSigned.cs" />
     <Compile Include="IR\MulUnsigned.cs" />
-    <Compile Include="IR\RemFloat.cs" />
+    <Compile Include="IR\RemFloatR4.cs" />
     <Compile Include="IR\RemSigned.cs" />
     <Compile Include="IR\RemUnsigned.cs" />
-    <Compile Include="IR\SubFloat.cs" />
+    <Compile Include="IR\SubFloatR4.cs" />
     <Compile Include="IR\SubSigned.cs" />
     <Compile Include="IR\SubUnsigned.cs" />
     <Compile Include="IR\Switch.cs" />
@@ -337,7 +343,7 @@
     <Compile Include="IR\IntegerToFloatConversion.cs" />
     <Compile Include="IR\BaseIRInstruction.cs" />
     <Compile Include="IR\Jmp.cs" />
-    <Compile Include="IR\Load.cs" />
+    <Compile Include="IR\LoadInt.cs" />
     <Compile Include="IR\LogicalAnd.cs" />
     <Compile Include="IR\LogicalNot.cs" />
     <Compile Include="IR\LogicalOr.cs" />
