- Removing memory operand [in progress]

--- a/Source/Mosa.Compiler.Framework/Mosa.Compiler.Framework.csproj
+++ b/Source/Mosa.Compiler.Framework/Mosa.Compiler.Framework.csproj
@@ -101,11 +101,18 @@
     <Compile Include="Intrinsics\Load64.cs" />
     <Compile Include="Intrinsics\InternalsForArray.cs" />
     <Compile Include="IR\AddFloatR4.cs" />
+    <Compile Include="IR\MoveInteger.cs" />
+    <Compile Include="IR\MoveFloatR8.cs" />
+    <Compile Include="IR\MoveFloatR4.cs" />
+    <Compile Include="IR\ConversionFloatR8toFloatR4.cs" />
+    <Compile Include="IR\ConversionFloatR4toFloatR8.cs" />
     <Compile Include="IR\DivFloatR8.cs" />
     <Compile Include="IR\FilterEnd.cs" />
     <Compile Include="IR\FilterStart.cs" />
-    <Compile Include="IR\FloatR8ToIntegerConversion.cs" />
-    <Compile Include="IR\IntegerToFloatR4Conversion.cs" />
+    <Compile Include="IR\CompareFloatR4.cs" />
+    <Compile Include="IR\CompareFloatR8.cs" />
+    <Compile Include="IR\ConversionFloatR8ToInteger.cs" />
+    <Compile Include="IR\ConversionIntegerToFloatR4.cs" />
     <Compile Include="IR\LoadFloatR4.cs" />
     <Compile Include="IR\LoadFloatR8.cs" />
     <Compile Include="IR\MulFloatR8.cs" />
@@ -113,7 +120,7 @@
     <Compile Include="IR\SetLeaveTarget.cs" />
     <Compile Include="IR\KillAllExcept.cs" />
     <Compile Include="IR\Flow.cs" />
-    <Compile Include="IR\StoreInt.cs" />
+    <Compile Include="IR\StoreInteger.cs" />
     <Compile Include="IR\StoreFloatR4.cs" />
     <Compile Include="IR\StoreFloatR8.cs" />
     <Compile Include="IR\SubFloatR8.cs" />
@@ -341,14 +348,13 @@
     <Compile Include="IR\Nop.cs" />
     <Compile Include="IR\IRInstruction.cs" />
     <Compile Include="IR\Epilogue.cs" />
-    <Compile Include="IR\FloatCompare.cs" />
-    <Compile Include="IR\FloatR4ToIntegerConversion.cs" />
-    <Compile Include="IR\IntegerCompareBranch.cs" />
-    <Compile Include="IR\IntegerCompare.cs" />
-    <Compile Include="IR\IntegerToFloatR8Conversion.cs" />
+    <Compile Include="IR\ConversionFloatR4ToInteger.cs" />
+    <Compile Include="IR\CompareIntegerBranch.cs" />
+    <Compile Include="IR\CompareInteger.cs" />
+    <Compile Include="IR\ConversionIntegerToFloatR8.cs" />
     <Compile Include="IR\BaseIRInstruction.cs" />
     <Compile Include="IR\Jmp.cs" />
-    <Compile Include="IR\LoadInt.cs" />
+    <Compile Include="IR\LoadInteger.cs" />
     <Compile Include="IR\LogicalAnd.cs" />
     <Compile Include="IR\LogicalNot.cs" />
     <Compile Include="IR\LogicalOr.cs" />
