--- a/Source/Mosa.Compiler.Framework/Mosa.Compiler.Framework.csproj
+++ b/Source/Mosa.Compiler.Framework/Mosa.Compiler.Framework.csproj
@@ -365,10 +365,10 @@
     <Compile Include="IR\Return.cs" />
     <Compile Include="IR\ShiftLeft.cs" />
     <Compile Include="IR\ShiftRight.cs" />
-    <Compile Include="IR\SignExtendedMove.cs" />
+    <Compile Include="IR\MoveSignExtended.cs" />
     <Compile Include="IR\ThreeOperandInstruction.cs" />
     <Compile Include="IR\TwoOperandInstruction.cs" />
-    <Compile Include="IR\ZeroExtendedMove.cs" />
+    <Compile Include="IR\MoveZeroExtended.cs" />
     <Compile Include="CIL\NopInstruction.cs" />
     <Compile Include="InstructionNode.cs" />
     <Compile Include="CIL\BaseCILInstruction.cs" />
