--- a/Source/CodeMaid.config
+++ b/Source/CodeMaid.config
@@ -383,6 +383,9 @@
             <setting name="Cleaning_RemoveEndOfFileTrailingNewLine" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="Digging_PrimarySortOrder" serializeAs="String">
+                <value>0</value>
+            </setting>
         </SteveCadwallader.CodeMaid.Properties.Settings>
     </userSettings>
 </configuration>
