Added Disassembly Stage
- Added simple implementation of DisassemblyStage to Explorer using
SharpDisasm

--- a/Source/CodeMaid.config
+++ b/Source/CodeMaid.config
@@ -386,6 +386,10 @@
             <setting name="Digging_PrimarySortOrder" serializeAs="String">
                 <value>0</value>
             </setting>
+            <setting name="Cleaning_UpdateFileHeaderCSharp" serializeAs="String">
+                <value>// Copyright (c) MOSA Project. Licensed under the New BSD License.
+</value>
+            </setting>
         </SteveCadwallader.CodeMaid.Properties.Settings>
     </userSettings>
 </configuration>
