--- a/Source/Mosa.BootLoader.x86/Mosa.BootLoader.x86.csproj
+++ b/Source/Mosa.BootLoader.x86/Mosa.BootLoader.x86.csproj
@@ -4,12 +4,12 @@
     <ProjectType>Local</ProjectType>
     <ProductVersion>9.0.21022</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{44725E46-513F-4CFB-8196-2191399C514B}</ProjectGuid>
+    <ProjectGuid>{EA460394-B868-45FB-8B7F-4096550B3113}</ProjectGuid>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <AssemblyKeyContainerName>
     </AssemblyKeyContainerName>
-    <AssemblyName>Mosa.UnitTest.x86</AssemblyName>
+    <AssemblyName>Mosa.BootLoader.x86</AssemblyName>
     <DefaultClientScript>JScript</DefaultClientScript>
     <DefaultHTMLPageLayout>Grid</DefaultHTMLPageLayout>
     <DefaultTargetSchema>IE50</DefaultTargetSchema>
@@ -18,8 +18,8 @@
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>
     </AppDesignerFolder>
-    <RootNamespace>Mosa.UnitTest.x86</RootNamespace>
-    <StartupObject>Mosa.UnitTest.x86.Boot</StartupObject>
+    <RootNamespace>Mosa.BootLoader.x86</RootNamespace>
+    <StartupObject>Mosa.BootLoader.x86.Boot</StartupObject>
     <FileUpgradeFlags>
     </FileUpgradeFlags>
     <OldToolsVersion>3.5</OldToolsVersion>
@@ -101,10 +101,6 @@
     <ProjectReference Include="..\Mosa.Runtime\Mosa.Runtime.csproj">
       <Project>{77961864-db33-4189-804f-d774022c96e2}</Project>
       <Name>Mosa.Runtime</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Mosa.UnitTest.Collection\Mosa.UnitTest.Collection.csproj">
-      <Project>{067AAB6B-447A-45BA-9E0D-DFEA886B4F69}</Project>
-      <Name>Mosa.UnitTest.Collection</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
