--- a/Source/Mosa.Platform.x86/Mosa.Platform.x86.csproj
+++ b/Source/Mosa.Platform.x86/Mosa.Platform.x86.csproj
@@ -127,6 +127,7 @@
     <Compile Include="Intrinsic\FrameCallRetU8.cs" />
     <Compile Include="Intrinsic\FrameCallRetU4.cs" />
     <Compile Include="Intrinsic\FrameCall.cs" />
+    <Compile Include="Intrinsic\FrameIRet.cs" />
     <Compile Include="Intrinsic\Get32.cs" />
     <Compile Include="Intrinsic\Get16.cs" />
     <Compile Include="Intrinsic\FrameJump.cs" />
