- Writing a BootLoader (to be used with unit tests)

--- a/Source/Mosa.UnitTest.Engine/Mosa.UnitTest.Engine.csproj
+++ b/Source/Mosa.UnitTest.Engine/Mosa.UnitTest.Engine.csproj
@@ -42,6 +42,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="IUnitTestMessage.cs" />
+    <Compile Include="UnitTestMessage.cs" />
     <Compile Include="UnitTestRequest.cs" />
     <Compile Include="UnitTestEngine.cs" />
   </ItemGroup>
