- Writing a BootLoader (to be used with unit tests)

--- a/Source/Mosa.ClassLib/Mosa.ClassLib.csproj
+++ b/Source/Mosa.ClassLib/Mosa.ClassLib.csproj
@@ -64,6 +64,7 @@
     <Compile Include="BinaryFormat.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="LZF.cs" />
     <Compile Include="Math.cs">
       <SubType>Code</SubType>
     </Compile>
