--- a/Source/Mosa.UnitTest.Engine/Mosa.UnitTest.Engine.csproj
+++ b/Source/Mosa.UnitTest.Engine/Mosa.UnitTest.Engine.csproj
@@ -46,6 +46,10 @@
     <Compile Include="UnitTestEngine.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Mosa.ClassLib\Mosa.ClassLib.csproj">
+      <Project>{27A3C89C-1967-45FF-A77E-94F44995C42C}</Project>
+      <Name>Mosa.ClassLib</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Mosa.Compiler.Common\Mosa.Compiler.Common.csproj">
       <Project>{0b1011a6-8fcd-4f9e-bbb8-8db86e23d2e8}</Project>
       <Name>Mosa.Compiler.Common</Name>
