--- a/Source/Mosa.Runtime/Mosa.Runtime.csproj
+++ b/Source/Mosa.Runtime/Mosa.Runtime.csproj
@@ -78,6 +78,7 @@
     <Compile Include="Builders\RuntimeType.cs" />
     <Compile Include="Builders\RuntimeTypeInfo.cs" />
     <Compile Include="ExceptionHandlerType.cs" />
+    <Compile Include="StartUp.cs" />
     <Compile Include="GC.cs" />
     <Compile Include="InternalsForArray.cs" />
     <Compile Include="InternalsForObject.cs" />
