--- a/Source/Mosa.Platform.x86/Mosa.Platform.x86.csproj
+++ b/Source/Mosa.Platform.x86/Mosa.Platform.x86.csproj
@@ -151,7 +151,8 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Stages\BuildStackStage.cs" />
     <Compile Include="Stages\ConversionPhaseStage.cs" />
-    <Compile Include="Stages\SSESetupStage.cs" />
+    <Compile Include="Stages\StartUpStage.cs" />
+    <Compile Include="Stages\SSEInitStage.cs" />
     <Compile Include="Stages\FloatingPointStage.cs" />
     <Compile Include="Stages\FinalTweakTransformationStage.cs" />
     <Compile Include="Stages\SimpleDeadCodeRemovalStage.cs" />
