- Writing a BootLoader (to be used with unit tests)

--- a/Source/Mosa.Platform.x86/Mosa.Platform.x86.csproj
+++ b/Source/Mosa.Platform.x86/Mosa.Platform.x86.csproj
@@ -131,6 +131,7 @@
     <Compile Include="Intrinsic\Get32.cs" />
     <Compile Include="Intrinsic\Get16.cs" />
     <Compile Include="Intrinsic\FrameJump.cs" />
+    <Compile Include="Intrinsic\GetCS.cs" />
     <Compile Include="Intrinsic\GetFS.cs" />
     <Compile Include="Intrinsic\GetExceptionRegister.cs" />
     <Compile Include="Intrinsic\GetMethodExceptionLookupTable.cs" />
