--- a/Source/Mosa.UnitTest.Collection.xUnit/Mosa.UnitTest.Collection.xUnit.csproj
+++ b/Source/Mosa.UnitTest.Collection.xUnit/Mosa.UnitTest.Collection.xUnit.csproj
@@ -79,11 +79,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BaseUnitTest.cs" />
+    <Compile Include="FibonacciFixture.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StaticFieldFixture.cs" />
     <Compile Include="StructureFixture.cs" />
     <Compile Include="TestFixture.cs" />
     <Compile Include="UnitTestFixture.cs" />
-    <Compile Include="ValueTypeFixture.cs" />
     <Compile Include="WhileFixture.cs" />
   </ItemGroup>
   <ItemGroup>
