- Included more unit tests

--- a/Source/Mosa.UnitTest.Collection.xUnit/Mosa.UnitTest.Collection.xUnit.csproj
+++ b/Source/Mosa.UnitTest.Collection.xUnit/Mosa.UnitTest.Collection.xUnit.csproj
@@ -82,14 +82,22 @@
     <Compile Include="ArrayLayoutFixture.cs" />
     <Compile Include="BaseUnitTest.cs" />
     <Compile Include="BooleanFixture.cs" />
+    <Compile Include="BoxingFixture.cs" />
+    <Compile Include="CallFixture.cs" />
     <Compile Include="CallOrderFixture.cs" />
     <Compile Include="CallVirtualFixture.cs" />
     <Compile Include="CharFixture.cs" />
+    <Compile Include="ComparisonFixture.cs" />
+    <Compile Include="DelegateFixture.cs" />
+    <Compile Include="DerivedNewObjectFixture.cs" />
     <Compile Include="EnumFixture.cs" />
     <Compile Include="FibonacciFixture.cs" />
+    <Compile Include="GenericCallFixture.cs" />
     <Compile Include="Int16Fixture.cs" />
     <Compile Include="Int32Fixture.cs" />
     <Compile Include="Int8Fixture.cs" />
+    <Compile Include="InterfaceFixture.cs" />
+    <Compile Include="IsInstFixture.cs" />
     <Compile Include="NewObjectFixture.cs" />
     <Compile Include="OptimizationFixture.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
