--- a/Source/Mosa.UnitTest.Collection.xUnit/Mosa.UnitTest.Collection.xUnit.csproj
+++ b/Source/Mosa.UnitTest.Collection.xUnit/Mosa.UnitTest.Collection.xUnit.csproj
@@ -120,20 +120,28 @@
       <DesignTime>True</DesignTime>
       <AutoGen>True</AutoGen>
     </Compile>
+    <Compile Include="ListFixture.cs" />
     <Compile Include="NewObjectFixture.cs" />
     <Compile Include="OptimizationFixture.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RegisterAllocatorFixture.cs" />
+    <Compile Include="RemFixture.cs" />
     <Compile Include="SingleFixture.cs" />
     <Compile Include="StaticFieldFixture.cs" />
     <Compile Include="StringFixture.cs" />
-    <Compile Include="SwitchFixture.cs" />
+    <Compile Include="StructureFixture.cs" />
+    <Compile Include="SwitchFixture.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>SwitchFixture.tt</DependentUpon>
+    </Compile>
     <Compile Include="TestFixture.cs" />
     <Compile Include="UInt16Fixture.cs" />
     <Compile Include="UInt32Fixture.cs" />
     <Compile Include="UInt64Fixture.cs" />
     <Compile Include="UInt8Fixture.cs" />
     <Compile Include="UnitTestFixture.cs" />
+    <Compile Include="ValueTypeFixture.cs" />
     <Compile Include="WhileFixture.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -159,6 +167,10 @@
     <Content Include="LdlocaFixture.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
       <LastGenOutput>LdlocaFixture.cs</LastGenOutput>
+    </Content>
+    <Content Include="SwitchFixture.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <LastGenOutput>SwitchFixture.cs</LastGenOutput>
     </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
