Added specific IR instructions for loads/stores of parameters (incomplete)

--- a/Source/Mosa.Compiler.Framework/Mosa.Compiler.Framework.csproj
+++ b/Source/Mosa.Compiler.Framework/Mosa.Compiler.Framework.csproj
@@ -101,7 +101,19 @@
     <Compile Include="Intrinsics\Load64.cs" />
     <Compile Include="Intrinsics\InternalsForArray.cs" />
     <Compile Include="IR\AddFloatR4.cs" />
+    <Compile Include="IR\BaseStoreParameterInstruction.cs" />
+    <Compile Include="IR\LoadParameterCompound.cs" />
+    <Compile Include="IR\LoadParameterFloatR4.cs" />
+    <Compile Include="IR\LoadParameterFloatR8.cs" />
+    <Compile Include="IR\LoadParameterInteger.cs" />
+    <Compile Include="IR\LoadParameterSignExtended.cs" />
+    <Compile Include="IR\LoadParameterZeroExtended.cs" />
     <Compile Include="IR\StableObjectTracking.cs" />
+    <Compile Include="IR\StoreParameterCompound.cs" />
+    <Compile Include="IR\StoreParameterFloatR4.cs" />
+    <Compile Include="IR\StoreParameterFloatR8.cs" />
+    <Compile Include="IR\StoreParameterInteger.cs" />
+    <Compile Include="IR\BaseLoadParameterInstruction.cs" />
     <Compile Include="IR\UnstableObjectTracking.cs" />
     <Compile Include="IR\MoveInteger.cs" />
     <Compile Include="IR\MoveFloatR8.cs" />
@@ -144,9 +156,9 @@
     <Compile Include="IR\FinallyStart.cs" />
     <Compile Include="IR\Kill.cs" />
     <Compile Include="IR\Gen.cs" />
-    <Compile Include="IR\CompoundLoad.cs" />
-    <Compile Include="IR\CompoundMove.cs" />
-    <Compile Include="IR\CompoundStore.cs" />
+    <Compile Include="IR\LoadCompound.cs" />
+    <Compile Include="IR\MoveCompound.cs" />
+    <Compile Include="IR\StoreCompound.cs" />
     <Compile Include="Analysis\IBlockOrderAnalysis.cs" />
     <Compile Include="Metadata.cs">
       <SubType>
@@ -362,15 +374,15 @@
     <Compile Include="IR\LogicalNot.cs" />
     <Compile Include="IR\LogicalOr.cs" />
     <Compile Include="IR\LogicalXor.cs" />
-    <Compile Include="IR\OneOperandInstruction.cs" />
+    <Compile Include="IR\BaseOneOperandInstruction.cs" />
     <Compile Include="IR\Phi.cs" />
     <Compile Include="IR\Prologue.cs" />
     <Compile Include="IR\Return.cs" />
     <Compile Include="IR\ShiftLeft.cs" />
     <Compile Include="IR\ShiftRight.cs" />
     <Compile Include="IR\MoveSignExtended.cs" />
-    <Compile Include="IR\ThreeOperandInstruction.cs" />
-    <Compile Include="IR\TwoOperandInstruction.cs" />
+    <Compile Include="IR\BaseThreeOperandInstruction.cs" />
+    <Compile Include="IR\BaseTwoOperandInstruction.cs" />
     <Compile Include="IR\MoveZeroExtended.cs" />
     <Compile Include="CIL\NopInstruction.cs" />
     <Compile Include="InstructionNode.cs" />
