--- a/Source/Mosa.Tool.Debugger/packages.config
+++ b/Source/Mosa.Tool.Debugger/packages.config
@@ -1,4 +1,4 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="DockPanelSuite" version="2.11.0-beta1" targetFramework="net46" />
+  <package id="DockPanelSuite" version="2.13.0" targetFramework="net461" />
 </packages>
